SpriteBox auto-scales image based on actual window size

--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -1,7 +1,7 @@
 <template name="docEdit">
 	<div class="showDocFull">
 		<div class="docOverview">
-			<a href="{{ pathFor 'spriteBox' boxsize='600' }}">
+			<a href="{{ pathFor 'spriteBox' boxsize='auto' }}">
 				<img style="background-color: {{ backColor }}" src="{{ this.url }}"/>
 			</a>
 		</div>
