Upgrade to Meteor 1.1.0.1, small CSS tweak

--- a/client/style.less
+++ b/client/style.less
@@ -356,6 +356,7 @@ img {
 }
 
 .previous:hover, .next:hover, .dblogo:hover{
+	cursor: pointer;
 	color: @editorBackColor;
 	background-color: @highlight; //#c1c7c7
 	padding: 2px 4px;
