--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -5,7 +5,7 @@
 			background-color: {{ backColor }}
 		}
 	</style>
-	<div class="eboycopyright" style="color:{{ inverseBackColor }}">©eBoy</div>
+	<div class="eboycopyright" style="color:{{ inverseBackColor }}">{{ olderDoc }}&lt; ©eBoy &gt;{{ newerDoc }}</div>
 	<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}" onclick="">^</div>
 	<div class="contentbackground" style="background-color: {{ backColor }}">
 		<div class="spriteBoxFull">
