step to spriteBox neighbour pages, shortcuts
new: spriteBox: next and previous page, arrow key shortcuts
new: pool: arrow key shortcuts
misc: minor cleanups
todo: spriteBox pages are not yet aware of current search

--- a/client/style.less
+++ b/client/style.less
@@ -283,6 +283,9 @@ img {
 	position: fixed;
 	right: 0px;
 	padding: 6px 12px;
+	.goOlderDoc, .goNewerDoc {
+		cursor: pointer;
+	}
 }
 
 .spriteBoxInfoToggle {
