--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -11,7 +11,7 @@
 					</div>
 				{{/if}}
 				<figure>
-					<a href="{{ pathFor 'spriteBox' boxsize='auto'}}">
+					<a class="leavePool" href="{{ pathFor 'spriteBox' boxsize='auto'}}">
 						<img src="{{ this.url }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;" alt="{{ this.name }}">
 					</a>
 				</figure>
