--- a/client/style.less
+++ b/client/style.less
@@ -313,7 +313,7 @@ img {
 		display: table-cell;
 		vertical-align: middle;
 		padding: 24px;
-		-webkit-filter: invert(100%);
+		// -webkit-filter: invert(100%);
 	}
 }
 
@@ -330,7 +330,7 @@ img {
 	right: 0px;
 	padding: 6px 12px;
 	z-index: 20;
-	-webkit-filter: invert(100%);
+	// -webkit-filter: invert(100%);
 }
 
 .spriteBoxInfoToggle {
@@ -340,7 +340,7 @@ img {
 	bottom: 0px;
 	padding: 6px 12px;
 	z-index: 12;
-	-webkit-filter: invert(100%);
+	// -webkit-filter: invert(100%);
 }
 
 .docMeta {
