--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -6,20 +6,20 @@
 			color: {{ backColor }};
 		}
 	</style>
-	<div class="goNewerDoc">
+	<div class="goNewerDoc" style="color:{{ inverseBackColor }}">
 		<span class="navButton">
 			&#x25c0;
 		</span>
 	</div>
 	<div class="goOlderDoc">
-		<span class="navButton">
+		<span class="navButton" style="color:{{ inverseBackColor }}">
 			&#x25b6;
 		</span>
 	</div>
-	<div class="eboycopyright">
+	<div class="eboycopyright" style="color:{{ inverseBackColor }}" >
 		©eBoy
 	</div>
-	<div class="spriteBoxInfoToggle" onclick="">^</div>
+	<div class="spriteBoxInfoToggle" onclick="" style="color:{{ inverseBackColor }}">^</div>
 	<div class="contentbackground" style="background-color: {{ backColor }}">
 		<div class="spriteBoxFull">
 			<div class="spriteBoxClose">
