--- a/client/style.less
+++ b/client/style.less
@@ -188,8 +188,8 @@ img {
 	flex-direction: row;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
-	-webkit-align-items: flex-start;
-	align-items: flex-start;
+	-webkit-align-items: center;
+	align-items: center;
 
 	.docinfo {
 		margin: 0px;
@@ -202,6 +202,7 @@ img {
 		a {
 			color: inherit;
 			text-decoration: none;
+			display: table-caption;
 		}
 		.remove {
 		padding: 0px;
@@ -217,15 +218,16 @@ img {
 	}
 	.docbox {
 		padding: 0px;
-		margin: 3px;
+		margin: 0px;
 
 		-webkit-flex-grow: 1;
 		flex-grow: 1;
 
 		overflow-x: hidden;
 		overflow-y: hidden;
-		width: @thumbnailDim;
-		height: @thumbnailDim;
+		width: auto;
+		max-width: 50%;
+		max-height: 50vh;
 
 		display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
 		display: -moz-box;						/* OLD - Firefox 19- (buggy but mostly works) */
