--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -34,12 +34,11 @@
 				<li><span class="property">date</span>: {{ formatDate }}</li>
 				<li><span class="property">dimensions w/h</span>: {{sprite.metadata.width}}<span class="unit">px</span>/{{sprite.metadata.height}}<span class="unit">px</span></li>
 				<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{sizeFormatted.unit}}</span></li>
-				<li>
 				<li><span class="property">copyright</span>: {{sprite.metadata.copyright}}</li>
 				<li><span class="property">license</span>: {{sprite.metadata.license}}</li>
-				<span class="property">tags</span>: 
+				<li><span class="property">tags</span>: 
 					{{#each sprite.metadata.tags}}
-						<span class="tag">{{ this }}</span>
+						<span class="tag"><a href="{{ pathFor 'pool' slug=this page='1' query='q=tag' }}">{{ this }}</a></span>
 					{{/each}}
 				</li>
 				{{#if currentUser.profile.isEditor}}
