--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -29,6 +29,14 @@
 					size="20"
 				>
 			</div>
+			<div><span class="property">fullframe</span>:
+				<input
+					type="checkbox"
+					name="rectangle"
+					checked="{{ this.metadata.fullframe }}"
+					class="editFullframe"
+				>
+			</div>
 			<div><span class="property">license</span>:
 				<input
 					type="text"
@@ -43,21 +51,28 @@
 		<ol>
 			<li><span class="property">_id</span>: {{ this._id }}</li>
 			<li><span class="property">name</span>: {{ this.name }}</li>
-			<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
-			<li><span class="property">metadata.width</span>: {{this.metadata.width}}<span class="unit">px</span></li>
-			<li><span class="property">metadata.height</span>: {{this.metadata.height}}<span class="unit">px</span></li>
-			<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{sizeFormatted.unit}}</span></li>
-			<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
-			<li><span class="property">metadata.license</span>: {{this.metadata.license}}</li>
+			<li><span class="property">uploadedAt</span>: {{ this.uploadedAt }}</li>
+			<li><span class="property">metadata.width</span>: {{ this.metadata.width }}<span class="unit">px</span></li>
+			<li><span class="property">metadata.height</span>: {{ this.metadata.height }}<span class="unit">px</span></li>
+			<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{ sizeFormatted.unit }}</span></li>
+			<li><span class="property">metadata.copyright</span>: {{ this.metadata.copyright }}</li>
+			<li><span class="property">metadata.license</span>: {{ this.metadata.license }}</li>
 			<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
+			<li><span class="property">metadata.fullframe</span>:
+				{{#if this.metadata.fullframe}}
+					{{ this.metadata.fullframe }}
+				{{else}}
+					false
+				{{/if}}
+			</li>
 			<li>
 				<span class="property">metadata.tags</span>: 
 				{{#each this.metadata.tags}}
 					<span class="remove">(×)</span><span class="tag">{{this}}</span>
 				{{/each}}
 			</li>
-			<li><span class="property">uploadedBy.id</span>: {{this.metadata.uploadedBy.id}}</li>
-			<li><span class="property">uploadedBy.username</span>: {{this.metadata.uploadedBy.username}}</li>
+			<li><span class="property">uploadedBy.id</span>: {{ this.metadata.uploadedBy.id }}</li>
+			<li><span class="property">uploadedBy.username</span>: {{ this.metadata.uploadedBy.username }}</li>
 		</ol>
 	</div>
 </template>
