layout edits, mobile optimization
– max size in Pool View is set to absolute size
– flex-grow is turned off for images with fullframe property set to true
– hover for mobile is turned off

--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -2,7 +2,7 @@
 	{{> mainHeader }}
 	<div class="container">
 		{{#each showPix}}
-			<div class="docbox" style="background-color: {{ backColor }}">
+			<div class="docbox" style="background-color: {{ backColor }}; {{ flexOff }}">
 				{{#if currentUser.profile.isEditor}}
 					<div class="docinfo"><span class='remove'>(×)</span>_
 						<a href="{{ pathFor 'docEdit' }}">
