--- a/client/style.less
+++ b/client/style.less
@@ -224,7 +224,7 @@ img {
 
 	.docbox {
 		padding: 0px;
-		margin: 0px;
+		margin: 3px;
 
 		-webkit-flex-grow: 1;
 		flex-grow: 1;
@@ -238,8 +238,8 @@ img {
 			max-height: 75vh;
 		}
 		@media only screen and (min-width: 513px) {
-			max-width: 50%;
-			max-height: 50vh;
+			max-width: 384px;
+			max-height: 256px;
 		}
 
 		display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
@@ -436,12 +436,14 @@ img {
 	padding: 12px;
 }
 
-.previous:hover, .next:hover, .dblogo:hover{
-	cursor: pointer;
-	color: @editorBackColor;
-	background-color: @highlight; //#c1c7c7
-	padding: 2px 4px;
-	margin: -2px -4px;
+@media only screen and (min-width: 513px) {
+	.previous:hover, .next:hover, .dblogo:hover{
+		cursor: pointer;
+		color: @editorBackColor;
+		background-color: @highlight; //#c1c7c7
+		padding: 2px 4px;
+		margin: -2px -4px;
+	}
 }
 
 .previous:active, .next:active, .dblogo:active{
