--- a/client/style.less
+++ b/client/style.less
@@ -238,8 +238,8 @@ img {
 			max-height: 75vh;
 		}
 		@media only screen and (min-width: 513px) {
-			max-width: 384px;
-			max-height: 256px;
+			max-width: 49%;
+			max-height: 30vh;
 		}
 
 		display: -webkit-box;					/* OLD - iOS 6-, Safari 3.1-6 */
