--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -2,7 +2,7 @@
 	{{> mainHeader }}
 	<div class="container">
 		{{#each showPix}}
-			<div class="docbox" style="background-color: {{ backColor }}; {{ flexOff }}">
+			<div class="docbox" style="background-color: {{ backColor }}; {{ scaledSprite.styleMaxDocBoxWidth }} {{ styleFlexOff }}">
 				{{#if currentUser.profile.isEditor}}
 					<div class="docinfo"><span class='remove'>(×)</span>_
 						<a href="{{ pathFor 'docEdit' }}">
