SpriteBox background fix
background color does now cover full window content

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -1,9 +1,9 @@
 <template name="spriteBox">
-	<!-- style hack prevents  -->
+	<!-- style hack prevents white background when scrolling -->
 	<style type="text/css">
-		html {
+		body {
 			background-color: {{ backColor }};
-			color: {{ backColor }};
+			/*color: {{ backColor }};*/
 		}
 	</style>
 	<div class="goNewerDoc" style="color:{{ inverseBackColor }}">
