Revert "SpriteBox background fix"
This reverts commit 19ee6d016652f34380d973c280770e2c7dc1b4fb.

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -1,9 +1,9 @@
 <template name="spriteBox">
-	<!-- style hack prevents white background when scrolling -->
+	<!-- style hack prevents  -->
 	<style type="text/css">
-		body {
+		html {
 			background-color: {{ backColor }};
-			/*color: {{ backColor }};*/
+			color: {{ backColor }};
 		}
 	</style>
 	<div class="goNewerDoc" style="color:{{ inverseBackColor }}">
