Removed flashes on spriteBox
A body class is now set in the router depending on the route. The
background can be set between spriteBox Documents with the
.bodySpriteBox  class.

--- a/client/style.less
+++ b/client/style.less
@@ -22,8 +22,16 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+}
+
+.bodyPool, .bodyDocEdit {
 	background-color: @backColor;
 }
+
+.bodySpriteBox {
+	background-color: @almostBlack;
+}
+
 
 img {
 	image-rendering: -moz-crisp-edges;
