Documents in pool view get a shadow
small css edit

--- a/client/style.less
+++ b/client/style.less
@@ -228,8 +228,6 @@ img {
 		}
 	}
 
-
-
 	.docbox {
 		padding: 0px;
 		margin: 3px;
@@ -240,6 +238,18 @@ img {
 		overflow-x: hidden;
 		overflow-y: hidden;
 		width: auto;
+
+		-moz-box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
+								rgba(0, 0, 0, 0.2) 	0px 3px 1px -2px,
+								rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+
+		-webkit-box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
+								rgba(0, 0, 0, 0.2) 	0px 3px 1px -2px,
+								rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+
+		box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
+								rgba(0, 0, 0, 0.2) 	0px 3px 1px -2px,
+								rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
 
 		@media only screen and (max-width: 512px) {
 			max-width: 100%;
