--- a/client/style.less
+++ b/client/style.less
@@ -229,7 +229,7 @@ img {
 	}
 
 	.docbox {
-		padding: 0px;
+		padding: 12px; // will be overwritten with inline CSS for fullframe documents
 		margin: 3px;
 
 		-webkit-flex-grow: 1;
