Improved photo rendering
Documents with the tag ‘photo’ are now scaled/rendered with the default
browser method (soft) instead of pixelated. Sizing is improved as well.

--- a/client/style.less
+++ b/client/style.less
@@ -229,7 +229,7 @@ img {
 	}
 
 	.docbox {
-		padding: 12px; // will be overwritten with inline CSS for fullframe documents
+		padding: 8px 4px; // will be overwritten with inline CSS for fullframe documents
 		margin: 3px;
 
 		-webkit-flex-grow: 1;
