--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -12,7 +12,7 @@
 				{{/if}}
 				<figure>
 					<a class="leavePool" href="{{ pathFor 'spriteBox' boxsize='auto'}}">
-						<img src="{{ this.url }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;" alt="{{ this.name }}">
+						<img src="{{ this.url }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px; {{ styleSoftRender }}" alt="{{ this.name }}">
 					</a>
 				</figure>
 			</div>
