Display madeDate in Pool view, when in Edit Mode

--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -6,7 +6,7 @@
 				{{#if currentUser.profile.isEditor}}
 					<div class="docinfo"><span class='remove'>(×)</span>_
 						<a href="{{ pathFor 'docEdit' }}">
-							{{ this.metadata.backColor }} {{ this.metadata.width }}w {{ scaledSprite.scaleFactor }}x
+							{{ madeDate }} {{ this.metadata.width }}w {{ scaledSprite.scaleFactor }}x
 						</a>
 					</div>
 				{{/if}}
