--- a/client/templates/Headers.html
+++ b/client/templates/Headers.html
@@ -1,11 +1,13 @@
 <template name="mainHeader">
-	<div class="header">
-		<span class="headline">
-			<a href="{{ pathFor route='pool' page=1 slug='all' }}" class="dblogo">{{ name }}</a>
-		</span>
-		{{> searchPool}}
+	<div class="topnav">
+		<div class="header">
+			<span class="headline">
+				<a href="{{ pathFor route='pool' page=1 slug='all' }}" class=	"dblogo">{{ name }}</a>
+			</span>
+			{{> searchPool}}
+		</div>
+		{{> pagingHeader }}
 	</div>
-	{{> pagingHeader }}
 </template>
 
 <template name="searchPool">
