--- a/client/templates/mainLayout.html
+++ b/client/templates/mainLayout.html
@@ -1,12 +1,21 @@
 <Template name='mainLayout'>
 	{{#if currentUser.profile.isEditor}}
-		<div class="editor">
-			<a href="{{ pathFor 'pool' slug='all' page='1' }}">pool</a> | 
-			<a href="{{ pathFor 'addDoc' }}">addDoc</a> |
-			<a href="{{ pathFor 'login' }}">{{ currentUser.profile.name }}</a> |
-			<a href="{{ pathFor 'colors' }}">colors</a>
-			{{#if onSpriteBox}}
-				| <a href="{{ pathFor 'docEdit' _id=onSpriteBox.id}}" title="Edit {{onSpriteBox.id}}">{{onSpriteBox.id}}</a>
+		<div id="editorMenu">
+			<span id='toggleEditorMenu'>
+				{{#if showEditor }}
+					&lt;
+				{{else}}
+					&gt;
+				{{/if}}
+			</span>
+			{{#if showEditor}}
+				<a href="{{ pathFor 'pool' slug='all' page='1' }}">pool</a> | 
+				<a href="{{ pathFor 'addDoc' }}">addDoc</a> |
+				<a href="{{ pathFor 'login' }}">{{ currentUser.profile.name }}</a> |
+				<a href="{{ pathFor 'colors' }}">colors</a>
+				{{#if onSpriteBox}}
+					| <a href="{{ pathFor 'docEdit' _id=onSpriteBox.id}}" title="Edit {{onSpriteBox.id}}">{{onSpriteBox.id}}</a>
+				{{/if}}
 			{{/if}}
 		</div>
 	{{/if}}
