--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -27,7 +27,7 @@
 				<img class="fadein" src="{{ sprite.url }}" alt="{{ sprite.name }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">
 			</div>
 		</div>
-		<div class="docMeta" id="spriteBoxInfo" style="display: {{ visibility }}">
+		<div class="docMeta" id="spriteBoxInfo" style="display: {{ isVisible }}">
 			<div class="spriteBoxInfoToggle" onclick="">X</div>
 			<ol>
 				<li><span class="property">id</span>: {{ sprite._id }}</li>
