--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -4,11 +4,13 @@
 		{{#each showPix}}
 			<div class="docbox" style="background-color: {{ backColor }}; {{ scaledSprite.styleMaxDocBoxWidth }} {{ styleFlexOff }}">
 				{{#if currentUser.profile.isEditor}}
+					{{#if showDocInfo}}
 					<div class="docinfo"><span class='remove'>(×)</span>_
 						<a href="{{ pathFor 'docEdit' }}">
 							{{ madeDate }} {{ this.metadata.width }}w {{ scaledSprite.scaleFactor }}x
 						</a>
 					</div>
+					{{/if}}
 				{{/if}}
 				<figure>
 					<a class="leavePool" href="{{ pathFor 'spriteBox' boxsize='auto'}}">
