Nicer color palette

--- a/client/style.less
+++ b/client/style.less
@@ -508,3 +508,34 @@ img {
 .pagestats {
 	float: right;
 }
+
+#colorContainer {
+	padding: 24px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.colorBox {
+	margin: 3px;
+	max-width: 256px;
+	background-color: @backColor;
+	border-top-left-radius: 36px;
+	border-top-right-radius: 36px;
+}
+
+.colorSwatch {
+	border-top-left-radius: 36px;
+	border-top-right-radius: 36px;
+	border-width: 18px;
+	border-style: solid;
+	// (border-color is set inline
+}
+
+.colorValue {
+	padding: 3px 6px 0px 6px;
+}
+
+.colorName {
+	padding: 0px 6px 6px 6px;
+}
+
