Almost through moving from Iron Router to Flow Router
– Flow Router
– started conversion to new Javascript ES2015

--- a/client/templates/addDoc.html
+++ b/client/templates/addDoc.html
@@ -1,6 +1,6 @@
 <template name="addDoc">
 	<div class="addDoc">
-		<div class="fileUpload btn btn-primary">
+		<div class="fileUpload">
 			<span>upload</span>
 			<input type="file" class="myPixInput">
 		</div>
