--- a/client/style.less
+++ b/client/style.less
@@ -31,6 +31,30 @@ body {
 	height: 100%;
 }
 
+// proper pointers
+input.myPixInput,
+.toSpriteBox,
+.remove,
+.spriteBoxClose,
+.goSpriteBox,
+.goOlderDoc,
+.goNewerDoc,
+.goDocEdit,
+.spriteBoxInfoToggle,
+.previous:hover,
+.next:hover,
+.dblogo:hover,
+.toPool,
+.toAddDoc,
+.toLogin,
+.toColors,
+.toDocEdit,
+#toggleEditorMenu,
+.fileUpload,
+ {
+	cursor: pointer;
+}
+
 .bodyPool, .bodyDocEdit {
 	background-color: @backColor;
 }
@@ -167,13 +191,13 @@ img {
 		border: 1px solid @editorColor;
 		border-radius: 6px;
 		input.myPixInput {
-			padding: 12px;position: absolute;
-			top: 4px;
-			left: -6px;
-			padding: 0px;
-			cursor: pointer;
+			top: 0;
+	    right: 0;
+	    margin: 0;
+	    padding: 0;
+			position: absolute;
 			opacity: 0.0;
-			// filter: alpha(opacity=0);
+			filter: alpha(opacity=0);
 		}
 	}
 
@@ -257,12 +281,10 @@ img {
 
 		.remove {
 		opacity: 0.4;
-		cursor: pointer;
 		}
 		.remove:hover {
 			color: @deleteHighlight;
 			opacity: 1;
-			cursor: pointer;
 		}
 	}
 
@@ -334,7 +356,7 @@ img {
 
 .contentbackground {
 	width: 100%;
-	height:100%;
+	height: 100vh;
 	.spriteBoxFull {
 		width: 100%;
 		height:100%;
@@ -345,7 +367,6 @@ img {
 		.spriteBoxClose {
 			display: table-cell;
 			vertical-align: middle;
-			cursor: pointer;
 		}
 
 		.spriteBoxClose img {
@@ -372,7 +393,6 @@ img {
 .goOlderDoc, .goNewerDoc {
 	position: fixed;
 	height: 100%;
-	cursor: pointer;
 	opacity: 0;
 	z-index: 10;
 	transform: translateZ(0);
@@ -403,7 +423,6 @@ img {
 }
 
 .spriteBoxInfoToggle {
-	cursor: pointer;
 	position: fixed;
 	right: 0px;
 	bottom: 0px;
@@ -453,7 +472,6 @@ img {
 	.remove:hover {
 		color: @deleteHighlight;
 		opacity: 1;
-		cursor: pointer;
 	}
 	.editMeta {
 		font-size: 18px;
@@ -480,11 +498,6 @@ img {
 	color: @unitColor;
 }
 
-.myPixInput {
-	padding: 12px 10px;
-	background-color: nonce;
-}
-
 .paging {
 	background-color: none;
 	padding: 3px 12px 6px 12px;
@@ -492,7 +505,6 @@ img {
 
 @media only screen and (min-width: 513px) {
 	.previous:hover, .next:hover, .dblogo:hover{
-		cursor: pointer;
 		color: @editorBackColor;
 		background-color: @highlight; //#c1c7c7
 		padding: 2px 4px;
