--- a/client/templates/newLogIn.html
+++ b/client/templates/newLogIn.html
@@ -1,6 +1,6 @@
-<template name="login">
+<template name="newLogin">
 	<div class="loginform">
-		{{> loginButtons}} <a href="{{ pathFor 'pool' slug='all' page='1' }}">proceed ...</a>
+		{{> loginButtons}}
 		{{#if currentUser}}
 			<div class="docMeta">
 				<ol>
@@ -39,5 +39,3 @@
 		{{/if}}
 	</div>
 </template>
-
-
