user names display fixed
and minor cleanups

--- a/client/style.less
+++ b/client/style.less
@@ -33,22 +33,22 @@ body {
 
 // proper pointers
 input.myPixInput,
+.toPool,
+.goPool,
 .toSpriteBox,
+.goSpriteBox, 
+.toDocEdit,
+.goDocEdit,
 .remove,
-.spriteBoxClose,
-.goSpriteBox,
 .goOlderDoc,
 .goNewerDoc,
-.goDocEdit,
 .spriteBoxInfoToggle,
 .previous:hover,
 .next:hover,
 .dblogo:hover,
-.toPool,
 .toAddDoc,
 .toLogin,
 .toColors,
-.toDocEdit,
 #toggleEditorMenu,
 .fileUpload,
  {
@@ -364,16 +364,16 @@ img {
 		text-align: center;
 		display: table;
 
-		.spriteBoxClose {
+		.goPool {
 			display: table-cell;
 			vertical-align: middle;
 		}
 
-		.spriteBoxClose img {
+		.goPool img {
 			 -webkit-animation: fadein 0.3s ease forwards;
 		}
 
-		.spriteBoxClose .fadein {
+		.goPool .fadein {
 			 opacity: 1.0;
 		}
 
