--- a/client/templates/newSpriteBox.html
+++ b/client/templates/newSpriteBox.html
@@ -23,7 +23,7 @@
 		<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
 		<div class="contentbackground" style="background-color: {{ backColor }}">
 			<div class="spriteBoxFull">
-				<a class="spriteBoxClose">
+				<a class="goPool">
 					<img class="fadein" src="{{ this.url }}" alt="{{ this.name }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">
 				</a>
 			</div>
@@ -60,6 +60,7 @@
 						<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}×</li>
 						<li><span class="property">uploadedBy.id</span>: {{this.metadata.uploadedBy.id}}</li>
 						<li><span class="property">uploadedBy.username</span>: {{this.metadata.uploadedBy.username}}</li>
+						<li><span class="property">users.username</span>: {{ showThisUserName }}</li>
 					{{/if}}
 				</ol>
 			</div>
