route name changes

--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -1,4 +1,4 @@
-<template name="newDocEdit">
+<template name="docEdit">
 	{{#with thisPix}}
 		<div class="showDocFull">
 			<div class="docOverview">
