--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -1,4 +1,4 @@
-<template name="newPool">
+<template name="pool">
 	<div class="container">		
 		{{#if Template.subscriptionsReady}}
 			{{#each showPix}}
