--- a/client/templates/poolHeader.html
+++ b/client/templates/poolHeader.html
@@ -1,4 +1,4 @@
-<template name="newPoolHeader">
+<template name="poolHeader">
 	<div class="topnav">
 		<div class="header">
 			<span class="headline">
