--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -1,4 +1,4 @@
-<template name="newSpriteBox">
+<template name="spriteBox">
 	{{#with showThisPix}}
 		<!-- style hack fills hidden part of window with background color-->
 		<style type="text/css">
