--- a/client/templates/editorMenu.html
+++ b/client/templates/editorMenu.html
@@ -13,8 +13,8 @@
 				<a class="toAddDoc">addDoc</a> |
 				<a class="toLogin">{{ currentUser.profile.name }}{{ showThisUserName }}</a> |
 				<a class="toColors">colors</a>
-				{{#if onNewSpriteBox}}
-					| <a class="toDocEdit" title="Edit {{onSpriteBox.id}}">{{onNewSpriteBox.id}}</a>
+				{{#if onSpriteBox}}
+					| <a class="toDocEdit" title="Edit {{onSpriteBox.id}}">{{onSpriteBox.id}}</a>
 				{{/if}}
 			{{/if}}
 		</div>
