User name display fix, "loading…" shows on center of page

--- a/client/templates/editorMenu.html
+++ b/client/templates/editorMenu.html
@@ -11,7 +11,7 @@
 			{{#if showEditor}}
 				<a class="toPool">pool</a> | 
 				<a class="toAddDoc">addDoc</a> |
-				<a class="toLogin">{{ currentUser.profile.name }}{{ showThisUserName }}</a> |
+				<a class="toLogin">{{ thisUserName }}</a> |
 				<a class="toColors">colors</a>
 				{{#if onSpriteBox}}
 					| <a class="toDocEdit" title="Edit {{onSpriteBox.id}}">{{onSpriteBox.id}}</a>
