--- a/client/style.less
+++ b/client/style.less
@@ -551,3 +551,9 @@ img {
 	padding: 0px 6px 6px 6px;
 }
 
+.loading {
+	position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
